# react-wasm-demo

./: README.md  package.json
crate/: Cargo.toml
crate/pkg/: crate.d.ts  crate.js  crate_bg.wasm  crate_bg.wasm.d.ts  package.json
crate/src/: lib.rs
src/: App.css  App.tsx
src/workers/: zip-worker.ts
