[package]
name = "crate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
zip = { version = "0.6.3", default-features = false }
js-sys = "0.3.60"
chrono = { version = "0.4", features = ["wasmbind"] }
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"